--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,8 +11,8 @@ sites:
 
 status-website:
   baseUrl: /uptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
+  logoUrl: https://www.benjaminsimier.com/wp-content/uploads/2019/08/favico.png
+  name: Uptime
   introTitle:
   introMessage:
   navbar:
