--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -14,6 +14,7 @@ sites:
 status-website:
   baseUrl: /uptime
   logoUrl: https://www.benjaminsimier.com/wp-content/uploads/2019/08/favico.png
+  favicon: https://www.benjaminsimier.com/wp-content/uploads/2019/08/favico.png
   name: Uptime
   introTitle:
   introMessage:
